fix layout issue on mobile size blog post

--- a/src/components/PostHeader/postHeader.module.css
+++ b/src/components/PostHeader/postHeader.module.css
@@ -77,5 +77,6 @@
   .viewCount {
     padding-left: 0;
     width: unset;
+    padding-top: 0.5rem;
   }
 }
